# terminal-GPT

./: .gitignore  README.md  pyproject.toml
src/: cli.py  config.ini  main.py
