[tool.poetry]
name = "terminal-gpt"
version = "0.1.0"
description = ""
authors = ["AholicWiki <shannongafney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.14.1"
click = "^8.1.7"
configparser = "^6.0.1"
asyncio = "^3.4.3"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gpt = "src.cli:cli"
